[package]
name = "hnstar"
version = "0.1.0"
authors = ["Aaron Johnson <johnsoaab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
argonautica = "0.2.0"
base64 = "0.13.0"
chrono = "0.4.19"
r2d2 = "0.8.9"
r2d2_postgres = "0.18.0"
ring = "0.17.0-alpha.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"

[dependencies.postgres]
features = ["with-chrono-0_4"]
version = "0.19.0"