[package]
name = "hnstar-sync"
version = "0.1.0"
authors = ["Aaron Johnson <johnsoaab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio-postgres = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
tokio = { version = "1", features = ["full"] }