[package]
name = "hnstar"
version = "0.1.0"
authors = ["Aaron Johnson <johnsoaab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-files = "0.6.0-beta.2"
actix-web = { version = "4.0.0-beta.3", features = ["openssl"] }
chrono = "0.4.19"
deadpool = "0.7.0"
deadpool-postgres = "0.7.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
validator = { version = "0.12", features = ["derive"] }

[dependencies.postgres]
features = ["with-chrono-0_4"]
version = "0.19.0"

[dependencies.tokio-postgres]
version = "0.7.0"

[dependencies.postgres-types]
version = "0.2.0"

[features]
debug = []

